--- a/ClientHTML/public_html/index.html
+++ b/ClientHTML/public_html/index.html
@@ -6,43 +6,71 @@ and open the template in the editor.
 -->
 <html>
     <head>
-<script src="js/libs/jquery/jquery.js" type="text/javascript"></script>
-<script src="js/libs/knockout/knockout-min.js" type="text/javascript"></script>
-<script src="js/categorie.js" type="text/javascript"></script>
-
-<script>$( document ).ready(getData());</script>
-
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <script src="js/libs/jquery/jquery.js" type="text/javascript"></script>
+        <script src="js/libs/knockout/knockout-min.js" type="text/javascript"></script>
+        <script src="js/categorie.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script>$( document ).ready(getData());</script>
+        
+        <title>RESTFULL Project</title> 
     </head>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Catégories</a></li>
+            <li><a href="#">Livres</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
     <body>
-        <h2>Categories</h2>  
-        <div>  
-            <table class='contactsEditor'>  
-                <tr>  
-                    <th>Id</th>  
-                    <th>Nom</th>  
-                    <th>déscription</th>
-                    <th>Action</th>
-                </tr>  
-                <tbody data-bind="foreach: categories">  
+        <div class="container">
+            <div class="row">  
+                <table class='table table-striped'>  
                     <tr>  
-                        <td>  
-                            <label data-bind='text: id' > </label>  
-                        </td>  
-                        <td>  
-                            <input data-bind='value: nom' />  
-                        </td>  
-                         <td >  
-                            <input data-bind='value: description, enable: (parseInt(id())%2 ===0)' /> 
-                        </td>  
-                        <td><input type="button" value="Supprimer" onclick="value.remove()" />
-                         <input type="button" value="Mise a jour" /></td>
+                        <th>Id</th>  
+                        <th>Nom</th>  
+                        <th>Description</th>
+                        <th></th>
+                        <th></th>
                     </tr>  
-                </tbody>  
-            </table>  
-        </div>  
-        <div class="error"></div>
+                    <tbody data-bind="foreach: categories">  
+                        <tr>  
+                            <td>  
+                                <label data-bind='text: id' > </label>  
+                            </td>  
+                            <td>  
+                                <input data-bind='value: nom' />  
+                            </td>  
+                             <td >  
+                                <input data-bind='value: description, enable: (parseInt(id())%2 ===0)' /> 
+                            </td>  
+                            <td>
+                                <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            </td>
+                            <td>
+                                <a href="#" data-bind="click: $parent.remove"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></a>
+                            </td>
+                        </tr>  
+                    </tbody>  
+                </table>  
+            </div>  
+            <div class="error"></div>
+        </div>
     </body>
 </html>
