--- a/ClientHTML/public_html/index.html
+++ b/ClientHTML/public_html/index.html
@@ -10,67 +10,55 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <script src="js/libs/jquery/jquery.js" type="text/javascript"></script>
         <script src="js/libs/knockout/knockout-min.js" type="text/javascript"></script>
-        <script src="js/categorie.js" type="text/javascript"></script>
+        <script src="js/categories.js" type="text/javascript"></script>
+        <script src="js/livres.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script>$( document ).ready(getData());</script>
-        
-        <title>RESTFULL Project</title> 
-    </head>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
+        <script>
+            $(document).ready(function () {
+                $("#lienCateg").click(function () {
+                    $.get('categories.html', function (data) {
+                        $('#body').html(data);
+                        getDataCategories();
+                    });
+                });
+                $("#lienLivres").click(function () {
+                    $.get('livres.html', function (data) {
+                        $('#body').html(data);
+                        getDataLivres();
+                    });
+                });
+            });
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Catégories</a></li>
-            <li><a href="#">Livres</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+        </script>
+
+        <title>RESTFULL Project</title> 
+
+    </head>
     <body>
-        <div class="container">
-            <div class="row">  
-                <table class='table table-striped'>  
-                    <tr>  
-                        <th>Id</th>  
-                        <th>Nom</th>  
-                        <th>Description</th>
-                        <th></th>
-                        <th></th>
-                    </tr>  
-                    <tbody data-bind="foreach: categories">  
-                        <tr>  
-                            <td>  
-                                <label data-bind='text: id' > </label>  
-                            </td>  
-                            <td>  
-                                <input data-bind='value: nom' />  
-                            </td>  
-                             <td >  
-                                <input data-bind='value: description, enable: (parseInt(id())%2 ===0)' /> 
-                            </td>  
-                            <td>
-                                <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                            </td>
-                            <td>
-                                <a href="#" data-bind="click: $parent.remove"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></a>
-                            </td>
-                        </tr>  
-                    </tbody>  
-                </table>  
-            </div>  
-            <div class="error"></div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a id="lienCateg">Catégories</a></li>
+                        <li><a id="lienLivres">Livres</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+        <div id="body">
+
         </div>
     </body>
 </html>
