--- a/ClientHTML/public_html/categories.html
+++ b/ClientHTML/public_html/categories.html
@@ -1,6 +1,7 @@
 <div class="bs-callout bs-callout-info" id="callout-navs-anchor-disabled">
     <div class="error"><i>Liste des catégories</i></div>
 </div>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -15,13 +16,13 @@
                 <tbody data-bind="foreach: categories">  
                     <tr>  
                         <td>  
-                            <label data-bind='text: id' > </label>  
+                            <label data-bind='text: ident' > </label>  
                         </td>  
                         <td>  
                             <input data-bind='value: nom' />  
                         </td>  
                         <td >  
-                            <input data-bind='value: description, enable: (parseInt(id())%2 ===0)' /> 
+                            <input data-bind='value: description, enable: (parseInt(ident())%2 ===0)' /> 
                         </td>  
                         <td>
                             <a href="#" data-bind="click: $parent.update"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
