--- a/ClientHTML/public_html/livres.html
+++ b/ClientHTML/public_html/livres.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <table class='table table-striped'>  
+            <table class='table table-striped col-md-12'>  
                 <tr>  
                     <th>Id</th>  
                     <th>ISBN</th>  
